modified the word topology to benchmark.